test_programs/compile_failure/noirc_frontend_tests_impl_stricter_than_trait_different_trait_generics/src/main.nr

    trait Foo<T> {
        fn foo<U>() where T: T2<T>;
    }

    impl<A> Foo<A> for () {
        // Should be A: T2<A>
        fn foo<B>() where A: T2<B> {}
    }

    trait T2<C> {}
    